--- a/src/app/modules/app-orders/pages/app-order/app-order.component.html
+++ b/src/app/modules/app-orders/pages/app-order/app-order.component.html
@@ -2,275 +2,255 @@
 
   <div class="column is-two-thirds-desktop" aria-label="Menu items">
 
-      <div class="field">
-          <p class="control has-icons-left">
-              <input class="input is-small is-rounded" type="password" placeholder="Search Menu Item">
-              <span class="icon is-small is-left">
-                <fa-icon icon="search"></fa-icon> 
-              </span>
-          </p>
+    <div class="field has-addons">
+      <p class="control has-icons-left" style="width:100%">
+        <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="text" placeholder="Search Menu Item">
+        <span class="icon is-small is-left">
+          <fa-icon icon="search"></fa-icon>
+        </span>
+      </p>
+      <p class="control">
+        <a class="button is-primary is-small is-rounded">
+          Search
+        </a>
+      </p>
+    </div>
+
+    <div class="tabs">
+      <ul>
+        <li class="is-active"><a>All</a></li>
+        <li><a>Hot Drinks</a></li>
+        <li><a>Cold Drinks</a></li>
+        <li><a>Snacks</a></li>
+        <li><a>Others</a></li>
+      </ul>
+    </div>
+
+
+    <div class="columns is-1 is-mobile is-multiline">
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
       </div>
 
-      <div class="tabs">
-          <ul>
-              <li class="is-active"><a>All</a></li>
-              <li><a>Hot Drinks</a></li>
-              <li><a>Cold Drinks</a></li>
-              <li><a>Snacks</a></li>
-              <li><a>Others</a></li>
-          </ul>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div class="menu-item">Tripple Schezwan manchurian rice</div>
+            <div>R 40 * 1</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="box menu-item">
+          <div class="content has-text-centered">
+            <div>Masala Chai</div>
+            <div>R 12 * 2</div>
+          </div>
+        </div>
       </div>
 
 
-      <div class="columns is-1 is-mobile is-multiline">
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div class="menu-item">Tripple Schezwan manchurian rice</div>
-                      <div>R 40 * 1</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-          <div class="column">
-              <div class="box menu-item">
-                  <div class="content has-text-centered">
-                      <div>Masala Chai</div>
-                      <div>R 12 * 2</div>
-                  </div>
-              </div>
-          </div>
-
-
-      </div>
+    </div>
 
 
   </div>
 
   <div class="column" aria-label="KOT list">
 
-    <div class="tabs">
-        <ul>
-            <li class="is-active">
-                <a>
-                    <!-- <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span> -->
-                    <span>All</span>
-                </a>
-            </li>
-            <li>
-                <a>
-                    <!-- <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span> -->
-                    <span>Kot 1</span>
-                </a>
-            </li>
-            <li>
-                <a>
-                    <!-- <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span> -->
-                    <span>Kot 2</span>
-                </a>
-            </li>
-
-        </ul>
-    </div>
-
     <div class="box">
-        <div class="content">
+      <div class="content">
 
-            <table class="table is-hoverable is-fullwidth">
-                <thead>
-                    <tr>
-                        <th>Menu Item</th>
-                        <th>Rate</th>
-                        <th>Quantity</th>
-                        <th>Price</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Tea Powder</td>
-                        <td>12</td>
-                        <td>2</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                        <td>Tripple Schezwan manchurian rice</td>
-                        <td>40</td>
-                        <td>1</td>
-                        <td>40</td>
-                    </tr>
-                    <tr>
-                        <td>Tea Powder</td>
-                        <td>12</td>
-                        <td>2</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                        <td>Tea Powder</td>
-                        <td>12</td>
-                        <td>2</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                        <td>Tea Powder</td>
-                        <td>12</td>
-                        <td>2</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                      <td>Tea Powder</td>
-                      <td>12</td>
-                      <td>2</td>
-                      <td>24</td>
-                  </tr>
-                  <tr>
-                    <td>Tea Powder</td>
-                    <td>12</td>
-                    <td>2</td>
-                    <td>24</td>
-                </tr>
-                
-
-                </tbody>
-            </table>
-
-            <div class="box" style="box-shadow:none;">
-                <div class="content">
-                    <div class="columns is-mobile">
-                        <div class="column is-one-third">
-                            <div class="block">
-                                <a class="button is-small is-rounded is-primary"
-                                    style="width:100px;margin-top:25px;margin-bottom: 10px;">Add KOT</a>
-                                <a class="button is-small is-rounded is-info" style="width:100px;margin-bottom: 10px;">Pay
-                                    Now</a>
-                                <a class="button is-small is-rounded is-danger"
-                                    style="width:100px;margin-bottom: 10px;">Cancel</a>
-                            </div>
-                        </div>
-
-                        <div class="column">
-                            <div class="columns is-mobile">
-                                <div class="column" style="padding:0.2rem 0.5rem;">Total Amount</div>
-                                <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 156
-                                </div>
-                            </div>
-                            <div class="columns is-mobile">
-                                <div class="column" style="padding:0.2rem 0.5rem;">Discount</div>
-                                <div class="column has-text-right" style="padding:0.2rem 0.5rem;">10%
-                                </div>
-                            </div>
-                            <div class="columns is-mobile">
-                                <div class="column" style="padding:0.2rem 0.5rem;">Coupon(s)</div>
-                                <div class="column has-text-right" style="padding:0.2rem 0.5rem;">-
-                                </div>
-                            </div>
-                            <div class="columns is-mobile">
-                                <div class="column" style="padding:0.2rem 0.5rem;">Tax SGST</div>
-                                <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
-                                </div>
-                            </div>
-                            <div class="columns is-mobile">
-                                <div class="column" style="padding:0.2rem 0.5rem;">Tax CGST</div>
-                                <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
-                                </div>
-                            </div>
-                            <div class="columns is-mobile">
-                                <div class="column" style="padding:0.2rem 0.5rem;"><b>Payable</b></div>
-                                <div class="column has-text-right" style="padding:0.2rem 0.5rem;"><b>Rs
-                                        160</b>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
+        <table class="table is-hoverable is-fullwidth">
+          <thead>
+            <tr>
+              <th>Menu Item</th>
+              <th>Rate</th>
+              <th>Quantity</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Tea Powder</td>
+              <td>12</td>
+              <td>2</td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>Tripple Schezwan manchurian rice</td>
+              <td>40</td>
+              <td>1</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>Tea Powder</td>
+              <td>12</td>
+              <td>2</td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>Tea Powder</td>
+              <td>12</td>
+              <td>2</td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>Tea Powder</td>
+              <td>12</td>
+              <td>2</td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>Tea Powder</td>
+              <td>12</td>
+              <td>2</td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>Tea Powder</td>
+              <td>12</td>
+              <td>2</td>
+              <td>24</td>
+            </tr>
 
 
+          </tbody>
+        </table>
+
+        <div class="box" style="box-shadow:none;">
+          <div class="content">
+            <div class="columns is-mobile">
+              <div class="column is-one-third">
+                <div class="block">
+                  <!-- <a class="button is-small is-rounded is-primary"
+                    style="width:100px;margin-top:25px;margin-bottom: 10px;">Add KOT</a> -->
+                  <a class="button is-small is-rounded is-primary" style="width:100px;margin-bottom: 10px;">Pay
+                    Now</a>
+                  <a class="button is-small is-rounded is-danger" style="width:100px;margin-bottom: 10px;">Cancel</a>
                 </div>
+              </div>
+
+              <div class="column">
+                <div class="columns is-mobile">
+                  <div class="column" style="padding:0.2rem 0.5rem;">Total Amount</div>
+                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 156
+                  </div>
+                </div>
+                <div class="columns is-mobile">
+                  <div class="column" style="padding:0.2rem 0.5rem;">Discount</div>
+                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">10%
+                  </div>
+                </div>
+                <div class="columns is-mobile">
+                  <div class="column" style="padding:0.2rem 0.5rem;">Coupon(s)</div>
+                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">-
+                  </div>
+                </div>
+                <div class="columns is-mobile">
+                  <div class="column" style="padding:0.2rem 0.5rem;">Tax SGST</div>
+                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
+                  </div>
+                </div>
+                <div class="columns is-mobile">
+                  <div class="column" style="padding:0.2rem 0.5rem;">Tax CGST</div>
+                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;">Rs 7
+                  </div>
+                </div>
+                <div class="columns is-mobile">
+                  <div class="column" style="padding:0.2rem 0.5rem;"><b>Payable</b></div>
+                  <div class="column has-text-right" style="padding:0.2rem 0.5rem;"><b>Rs
+                      160</b>
+                  </div>
+                </div>
+
+              </div>
+
             </div>
 
+
+          </div>
         </div>
+
+      </div>
     </div>
 
-</div>
+  </div>
 
 </div>
