--- a/src/app/modules/dashboard/pages/payment-summery-chart/payment-summery-chart.component.html
+++ b/src/app/modules/dashboard/pages/payment-summery-chart/payment-summery-chart.component.html
@@ -6,7 +6,12 @@
             <p class="subtitle">Payment Summery</p>
           </div>
           <div class="column has-text-right ">
-            <a class="button is-rounded is-small">White</a>
+            <!-- <a class="button is-rounded is-small">White</a> -->
+            <label class="toggle is-small">
+              <input class="toggle-checkbox" type="checkbox" checked>
+              <div class="toggle-switch"></div>
+              <span class="toggle-label">Bluetooth</span>
+            </label>
           </div>
         </div>
       </div>
