--- a/src/app/modules/customers/pages/customers/customers.component.scss
+++ b/src/app/modules/customers/pages/customers/customers.component.scss
@@ -1,55 +1,3 @@
-#avatar {
-    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
-    background-image: url('../../../../../assets/images/profile_pic.jpg');
-    
-    /* make a square container */
-    width: 56px;
-    height: 56px;
-
-    /* fill the container, preserving aspect ratio, and cropping to fit */
-    background-size: cover;
-
-    /* center the image vertically and horizontally */
-    background-position: top center;
-
-    /* round the edges to a circle with border radius 1/2 container size */
-    border-radius: 50%;
-    margin-top:-8px;
-}
-
-.box{
-    box-shadow: 0px 3px 6px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
-    -webkit-transition: .2s ease-in;
-    -moz-transition:  .2s ease-in;
-    transition:  .2s ease-in;
-}
-
-.box:hover{
-    box-shadow: 10px 10px 10px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
-}
-
-.card-content{
-    padding: 1rem;
-}
-
-.column{
-    padding: .5rem;
-}
-
-.card{
-    min-width:375px;
-    cursor: pointer;
-    border-radius: 6px;
-    box-shadow:  0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0px rgba(10, 10, 10, 0.1);
-    -webkit-transition: .2s ease-in;
-    -moz-transition:  .2s ease-in;
-    transition:  .2s ease-in;
-}
-
-.card:hover{
-    box-shadow: 10px 10px 10px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
-}
-
-.media-content{
-    overflow: visible;
+.field:not(:last-child){
+    margin-bottom: 0%;
 }
