--- a/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <li><a>This Month</a></li>    
   </ul>
 
-  <div class="field has-text-right" style="margin-right: 10px;">
+  <div class="field has-addons" style="margin-right: 10px;">
       <p class="control has-icons-left">
           <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password"
               placeholder="From Date">
@@ -13,7 +13,12 @@
               <fa-icon icon="calendar-alt"></fa-icon>
           </span>
       </p>
-  </div>
+      <p class="control">
+        <a class="button is-primary is-small is-rounded">
+          Search
+        </a>
+      </p>
+    </div>
 </div>
 
 <div style="margin-bottom: 16px;">
